--- a/nRF51822/projects/ble_app_uart/pca10028/s130/armgcc/Makefile
+++ b/nRF51822/projects/ble_app_uart/pca10028/s130/armgcc/Makefile
@@ -37,9 +37,13 @@ SRC_FILES += \
   $(SDK_ROOT)/external/segger_rtt/RTT_Syscalls_GCC.c \
   $(SDK_ROOT)/external/segger_rtt/SEGGER_RTT.c \
   $(SDK_ROOT)/external/segger_rtt/SEGGER_RTT_printf.c \
+  $(SDK_ROOT)/hardware/mpu6050/MPU6050.c \
+  $(SDK_ROOT)/components/drivers_nrf/twi_master/nrf_drv_twi.c 
 
 # Include folders common to all targets
 INC_FOLDERS += \
+  $(SDK_ROOT)/hardware \
+  $(SDK_ROOT)/hardware/mpu6050 \
   $(SDK_ROOT)/components/drivers_nrf/comp \
   $(SDK_ROOT)/components/drivers_nrf/twi_master \
   $(SDK_ROOT)/components/ble/ble_services/ble_ancs_c \
@@ -88,8 +92,8 @@ INC_FOLDERS += \
   $(SDK_ROOT)/components/drivers_nrf/timer \
   $(SDK_ROOT)/components/libraries/util \
   $(SDK_ROOT)/components/drivers_nrf/pwm \
-  ../config \
   $(SDK_ROOT)/components/libraries/csense_drv \
+  ../config \
   $(SDK_ROOT)/components/libraries/csense \
   $(SDK_ROOT)/components/drivers_nrf/rng \
   $(SDK_ROOT)/components/libraries/low_power_pwm \
